# PracticaFinalSO

./: FixedPriorityScheduler.hpp  GantChartHorizontal.hpp  GanttChartWriter.hpp  Process.cpp  Process.hpp  ProcessReader.hpp  README.md  RoundRobinScheduler.hpp  SchedulerResult.hpp  SchedulerStep.hpp  SocketProcessSender.hpp  main.cpp  processComparison.hpp  server.c  testgantt.cpp  testsocket.cpp
test/: CMakeLists.txt  ProcessReaderTest.cpp  RoundRobinSchedulerTest.cpp  sampleInput
